kubernetes/installation/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-crud-ingress
  namespace: user-crud-app-ns
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-crud-service
                port:
                  number: 80
